--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>AdminLTE Dashboard</title>
+    <title>Raymarine Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" />
@@ -132,7 +132,7 @@
                                     <!-- 連線中狀態 -->
                                     <div class="content" id="connecting-screen" style="display: none;">
                                         <div class="alert alert-primary" role="alert">
-                                            Connecting...
+                                            BT Connecting...
                                         </div>
                                     </div>
 
@@ -154,9 +154,16 @@
                                                     <div class="card card-primary"> 
                                                         <div class="card-header"> 
                                                             <h3 class="card-title">LED 開</h3> 
-                                                        </div> <div class="card-body"> 
+                                                        </div> 
+                                                        <div class="card-body"> 
                                                             <!-- 修改後不使用 prompt，直接送出 SMP LED on/off --> 
-                                                            <button id="button-led" type="button" class="btn btn-primary"> 💡 LED ON </button> 
+                                                            <button id="button-led" type="button" class="btn btn-primary"> 💡 LED ON </button>
+                                                            <div class="mb-3"> 
+                                                                <strong>Status: </strong> 
+                                                                <span id="test-status">N/A
+                                                                    </span> 
+                                                            </div>
+                                                             
                                                         </div> 
                                                     </div> 
                                                 </div> 
@@ -171,10 +178,10 @@
                                                                 <strong>Status: </strong> 
                                                                 <span id="test-status">N/A
                                                                     </span> 
-                                                        </div>   
+                                                            </div>   
+                                                        </div> 
                                                     </div> 
-                                                </div> 
-                                            </div>
+                                                </div>
 
                                             <!-- LED 控制 -->
                                             <div class="row"> 
